[project]
name = "gpu-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
#requires-python = ">=3.11"
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "openai-whisper (>=20240930,<20240931)",
    "coqui-tts (>=0.26.0,<0.27.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
